src/components/Movies/MoviesCard/MoviesCard.css
.card {
  border-radius: 10px;
  display: flex;
  flex-direction: column;
	width: 270px;
  height: 218px;
	box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
}

.card__image {
	border-radius: 10px 10px 0 0;
	background-color: bisque;
	width: 270px;
	height: 151px;
	object-fit: cover;
	background-repeat: no-repeat;
	cursor: pointer;
}

.card__header {
	background-color: white;
  align-items: center;
	flex-direction: column;
  padding: 14px 12px;
}

.card__header-wrapper {
	display: flex;
	justify-content: space-between;
	align-items: center;
}

.card__btn {
	background-color: #FAFAFA;
	width: 16px;
	height: 16px;
	padding: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	cursor: pointer;
}

.card__like {
	border-style: solid;
	border-color: white;
	border-radius: 50%;
	box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
}

.card__like_active {
	background-color: #2BE080;
}

.card__btn:hover {
	opacity: 0.8;
}

.card__like_rm {
	background-color: white;
	color: black;
	border: 0;
}

.card__title {
	margin: 0;
	font-size: 13px;
	font-weight: 500;
}

.card__subtitle {
	margin: 0;
	color: #A0A0A0;
	font-size: 11px;
}

@media screen and (max-width: 768px) {
	.card {
		width: 339px;
		height: 257px;
	}

	.card__image {
		width: 339px;
		height: 190px;
	}
}

@media screen and (max-width: 425px) {
	.card {
		width: 300px;
		height: 235px;
	}

	.card__image {
		width: 300px;
		height: 168px;
	}
}

